<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:text="Title: "
                android:textSize="16sp" />

            <EditText
                android:id="@+id/edit_recipe_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:hint="Recipe Title"
                android:inputType="text"
                android:textSize="16sp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:text="Preparation Time:"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/edit_recipe_preparation_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Type a number"
                android:inputType="number"
                android:textSize="16sp"/>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:text="Serving size: "
                android:textSize="16sp" />

            <EditText
                android:id="@+id/edit_recipe_servings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:hint="Type a number"
                android:inputType="text"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:text="Recipe Category: "
                android:textSize="16sp" />

            <EditText
                android:id="@+id/edit_recipe_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:hint="Recipe Category"
                android:inputType="text"
                android:textSize="16sp" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:text="Comments: "
                android:textSize="16sp" />

            <EditText
                android:id="@+id/edit_recipe_comments"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:hint="Some Comments Here"
                android:inputType="text"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="4"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="3">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20dp"
                    android:text="Photograph: "
                    android:textSize="16sp"
                    android:layout_weight="1"/>
                <Button
                    android:id="@+id/take_photo"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:text="take photo"
                    android:layout_marginEnd="10dp"
                    android:textSize="10sp"
                    android:layout_weight="1"/>
                <Button
                    android:id="@+id/choose_from_album"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:text="Album"
                    android:textSize="10sp"
                    android:layout_weight="1"/>

            </LinearLayout>

            <ImageView
                android:id="@+id/recipe_image"
                android:layout_width="80dp"
                android:layout_height="80dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="4"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20dp"
                    android:text="List of Ingredients: "
                    android:textSize="16sp"
                    android:layout_weight="1.5"/>
                <Button
                    android:id="@+id/ingredient_select_button"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:text="Add"
                    android:layout_weight=".5"
                    android:textSize="10sp"/>
            </LinearLayout>

            <ListView
                android:id="@+id/ingredient_list_onRecipe"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="10dp">

            </ListView>

        </LinearLayout>

    </LinearLayout>
</ScrollView>